<resources>
    <string name="app_name">HotspotHunter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">HotspotHunter</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="scan">Scan!</string>
    <string name="scan_stop">Stop scanning</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wifiscan">WifiScan</string>
    <string name="vehicleName">Name of vehicle (e.g. AVG 355)</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="hostname_header">Hostname</string>
    <string name="token_header">Token</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Scan periodically in a given interval</string>
    <string name="upload_title">Upload results to host</string>
    <string name="sync_interval">Scan Interval</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>