<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/messages_header">

        <EditTextPreference
            app:key="hostname"
            app:title="@string/hostname_header"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:key="token"
            app:title="@string/token_header"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="upload"
            app:title="@string/upload_title" />

        <SwitchPreferenceCompat
            android:id="@+id/switchPreferenceCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="sync"
            app:title="@string/sync_title" />
        <ListPreference
            app:defaultValue="10_000"
            app:dependency="sync"
            app:entries="@array/interval_entries"
            app:entryValues="@array/interval_values"
            app:key="10_000"
            app:title="@string/sync_interval"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>